VestbjergByggecenter/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\simon\Documents\GitHub\1.semester-projekt\VestbjergByggecenter
-d
C:\Users\simon\Documents\GitHub\1.semester-projekt\VestbjergByggecenter\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\simon\Documents\GitHub\1.semester-projekt\VestbjergByggecenter\ModelLayer\ProductContainer.java
<---- end of javadoc command ---->
Loading source file C:\Users\simon\Documents\GitHub\1.semester-projekt\VestbjergByggecenter\ModelLayer\ProductContainer.java...
C:\Users\simon\Documents\GitHub\1.semester-projekt\VestbjergByggecenter\ModelLayer\ProductContainer.java:40: error: ';' expected
        findProduct(barcode).create()
                                     ^
1 error
